--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=PatientApp1
+server.port=8081
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+springdoc.swagger-ui.path=/swagger-custom.html
+spring.liquibase.change-log=liquibase-changelog/liquibase-changelog.yaml
+spring.cloud.openfeign.client.config.medical-clinic.url=http://localhost:8080
