--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,11 @@ version: '3.8'
 services:
   medicalclinic:
     container_name: medicalclinic
-    build:
-      context: ../medicalclinic
-      dockerfile: Dockerfile
+    image: medicalclinic-medicalclinic
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/medicalclinic
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/test
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: password
       SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.PostgreSQLDialect
@@ -17,20 +15,15 @@ services:
     networks:
       - backend
 
-  patientapp:
-    container_name: patientapp
+  patientapp1:
+    container_name: patientapp1
     build:
-      context: ../patientapp
+      context: .
       dockerfile: Dockerfile
     ports:
       - "8081:8081"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/patientapp
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
-      SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.PostgreSQLDialect
-    depends_on:
-      - postgres
+      SPRING_CLOUD_OPENFEIGN_CLIENT_CONFIG_MEDICALCLINIC_URL: http://medicalclinic:8080
     networks:
       - backend
 
@@ -38,9 +31,9 @@ services:
     image: postgres:latest
     container_name: postgres
     environment:
-      POSTGRES_DB: medicalclinic
+      POSTGRES_DB: test
       POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: password123
     ports:
       - "5432:5432"
     networks:
