--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8082:8082"
+      - "8085:8085"
     environment:
       SPRING_CLOUD_OPENFEIGN_CLIENT_CONFIG_MEDICALCLINIC_URL: http://medicalclinic:8088
     networks:
@@ -33,7 +33,7 @@ services:
     environment:
       POSTGRES_DB: test
       POSTGRES_USER: user
-      POSTGRES_PASSWORD: password123
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     networks:
